compiler/testData/diagnostics/tests/TraitOverrideObjectMethods.kt
trait MyTrait: <!PLATFORM_CLASS_MAPPED_TO_KOTLIN!>Object<!> {
    override fun toString(): String
    public override fun finalize()
    public <!OVERRIDING_FINAL_MEMBER!>override<!> fun wait()
}